[project]
name = "rsa"
version = "0.1.0"
description = "A simple RSA implementation in pure python."
authors = [
  {name = "Liam Lundy", email = "llundy013@gmail.com"},
]
readme = "README.md"
license= "MIT"
requires-python = ">=3.14.3"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"
